# ElegyDevConsoleApp

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
src/: Main.cpp  Precompiled.hpp
src/Model/: ConsoleMessage.hpp
src/Network/: Network.cpp  Network.hpp
src/View/: ConsoleView.cpp  ConsoleView.hpp
src/View/ftxui/: LICENSE  Scroller.hpp
